# router/app.go
@@ -25,6 +25,9 @@ func Router() *gin.Engine {
 	r.GET("/user-detail", service.GetUserDetail)
 	r.POST("/login", service.Login)
 	r.POST("/send-code", service.SendCode)
+	r.POST("/register", service.Register)
+	//排行榜
+	r.GET("/rank-list", service.GetRankList)
 
 	//submit
 	r.GET("/submit-list", service.GetSubmitList)
